--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Colaborá</title>
 </head>
@@ -21,6 +23,13 @@
         </ul>
         </nav>
         </header>
+        <main>
+            <h2 class="parrafo-tienda">
+                Bienvenidos a la tienda solidaria de «GARRITAS AVENTURERAS». Todos los productos que encontrarás aquí 
+                tienen como fin poder recaudar fondos para ayudarnos a cubrir las necesidades básicas de 
+                nuestros rescatados, por ello te agradecemos tu colaboración para poder seguir con nuestra labor.
+            </h2>
+        </main>
 
     <footer>
         <section>
@@ -29,6 +38,7 @@
         <img src="../img/whastapp.png" alt="whastapp">
     </section>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
