--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="gatos, rescate, adopcion, voluntarios, callejeros, abandonados, felinos ayuda, ayudar">
+    <meta name="description" content="Garritas Aventureras es una Asociación protectora de 
+    animales fundada con un solo fin, encontrar hogar a animales abandonados. Adopta, NO compres">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
     <title>Garritas Aventureras</title>
@@ -11,6 +17,7 @@
 <body>
     <header>
         <h1>
+            <img src="./img/logo.png" alt="logo">
             GARRITAS AVENTURERAS
         </h1>
         <nav>
@@ -85,34 +92,34 @@
                 </div>
                 <div class="preguntas">
                 <ul>
-                <li>¿Puedo hacerme cargo de sus gastos? Es decir: ¿pagar su comida y los gastos veterinarios si los hubiere?
+                    <li>¿Puedo hacerme cargo de sus gastos? Es decir: ¿pagar su comida y los gastos veterinarios si los hubiere?
                 Si tienes niños/as ¿cuántos años tienen que tener para adoptar una mascota? Cualquier edad es buena si en tu familia tenéis experiencia previa y sabéis cuidarlos. Sinola mejor edad para adoptar es que tus hijos/as tengan entre 7 y 8 años. Es una edad en la que les puedes enseñar a ser gentiles y cuidadosos cuando juegan o acarician el gato. Cuanto más jóvenes sean los niños de casa, más mayor debería ser tu mascota. Es mejor adoptar un gato adulto en estos casos pues están más preparados para los “cariñitos” de los niños. 
                 Los gatitos son más frágiles y pueden resultar lastimados, aunque sea jugando.
-                </li>
-                <li>
+                    </li>
+                    <li>
                 ¿Presenta algún miembro de tu familia alergias? Si no lo sabes, conviértete en 
                 familia de acogida durante un tiempo y asegúrate que no se 
                 presenta ningún caso de alergia en ningún miembro de la familia.
-                </li>   
-                <li>Si vives de alquiler, ¿te permite tu casero tener mascotas?
-                </li>   
-                <li>Aunque sea el deseo de tu hijo/a ¿estás dispuesto a asumir tú la responsabilidad de 
+                    </li>   
+                    <li>Si vives de alquiler, ¿te permite tu casero tener mascotas?
+                    </li>   
+                    <li>Aunque sea el deseo de tu hijo/a ¿estás dispuesto a asumir tú la responsabilidad de 
                 cambiarle el arenero, darle de comer, darle mimos, quererlo?
-                </li>
-                <li>Vivir con un gato significa que la decoración de tu casa cambiará.  Se llenará de
+                    </li>
+                    <li>Vivir con un gato significa que la decoración de tu casa cambiará.  Se llenará de
                 juguetes de gatos, rascadores, areneros. Tu sofá puede aparecer con arañazos así como tus muebles, 
                 algunas veces vomitan para purgarse y otras puede que hagan sus necesidades fuera de su caja. 
                 ¿Aceptas esta realidad?
-                </li>
-                <li>
+                    </li>
+                    <li>
                 ¿Tienes tiempo para dedicarles jugando, mimándolo? ¿lo vas a dejar muchas horas solo?  Adopta 2 gatos, 
                 así se harán compañía, y el gasto NO se multiplica.
-                </li>
+                    </li>
                 <li>
                 ¿Tienes otra mascota? Infórmate bien como integrar la nueva mascota con tu familia. Habla con nosotros te informaremos.
-                </li>
+                    </li>
                 Bueno, tras contestar a todas preguntas ya tendrás una visión más clara sobre si puedes adoptar a un gato para darle un hogar feliz. Recuerda NO SON JUGUETES, son seres vivos que se merecen una familia amorosa
-            </ul>
+                </ul>
         </div>
         <div>
             <h4>Salva una vida, Adopta un Gato</h4>
@@ -127,5 +134,8 @@
         <img src="./img/whastapp.png" alt="whastapp">
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
