--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -11,7 +12,9 @@
 </head>
     <body>
         <header>
-        <h1>Colaborá para que podamos continuar ayudando.
+        <h1>
+            <img src="../img/logo.png" alt="logo">
+            Colaborá para que podamos continuar ayudando.
         </h1>
         <nav>
         <ul>
@@ -29,6 +32,42 @@
                 tienen como fin poder recaudar fondos para ayudarnos a cubrir las necesidades básicas de 
                 nuestros rescatados, por ello te agradecemos tu colaboración para poder seguir con nuestra labor.
             </h2>
+            <section class="tienda">
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/tienda1.jpg" class="card-img-top" alt="taza">
+                    <div class="card-body">
+                    <h5 class="card-title">Taza Cat</h5>
+                    <p class="card-text">Hermosa manera de ayudar y beber un rico cafe con nuestra taza</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/tienda2.jpg" class="card-img-top" alt="TazayPlato">
+                    <div class="card-body">
+                    <h5 class="card-title">Set Desayunos y Meriendas</h5>
+                    <p class="card-text">Divina taza con plato para los amantes gatunos</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/tienda3.jpg" class="card-img-top" alt="Mate">
+                    <div class="card-body">
+                    <h5 class="card-title">Mate</h5>
+                    <p class="card-text">Mate con un precioso diseño gatero.</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="../img/tienda4.jpg" class="card-img-top" alt="SetMatero">
+                    <div class="card-body">
+                    <h5 class="card-title">Set Matero</h5>
+                    <p class="card-text">Los diseños mas peludos en sets de mates para una tarde de plaza</p>
+                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    </div>
+                </div>
+            </section>
+
+
         </main>
 
     <footer>
