--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
 </head>
 <body>
     <header>
-    <h1>Contactános para mayor información
+    <h1>
+        <img src="../img/logo.png" alt="logo">
+        Contactános para mayor información
     </h1>
     <nav>
         <ul>
@@ -24,58 +27,56 @@
     <main>
         <section class="formulario"> 
             <h1>Dejanos tus datos y te contactamos a la brevedad:</h1></section>
-        <section>
-        <form action="">
-            <div>
-            <label for="nombre">Nombre</label>
-            <input type="text" id="Nombre">
-
-            </div>
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido">
-            <div>
-
-            </div>
-            <label for="email">Email</label>
-            <input type="text" id="email">
-            <div>
-
-            </div>
-            <label for="telefono">Telefono</label>
-            <input type="text" id="telefono">
-            <div>
-
-
-    <h3> Género:</h3>
-    <div>
-    <label for="masculino">Masculino</label>
-    <input type="radio" name="genero"
-    <label for="femenino">Femenino</label>
-    <input type="radio" name="genero"
-    <label for="otro">Otro</label>
-    <input type="radio" name="genero"
-    </div>
-    <div>
-    <select name="" id="">
-        <option value="">Pais</option>
-        <option value="">Argentina</option>
-        <option value="">Paraguay</option>
-        <option value="">Uruguay</option>
-        <option value="">Chile</option>
-        <option value="">Otro</option>  
-    </select> 
-    </div>
-
-    <div>
-        <h3>Mensaje:</h3>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        </div>
-    <div>
-        <input type="submit">
-        <input type="reset">
-    </div>
-    </form>
-    </section>
+            <form class="form">
+                <div>
+                <label for="nombre">Nombre</label>
+                <input type="text" id="Nombre">
+                </div>
+                <div>
+                <label for="apellido">Apellido</label>
+                <input type="text" id="apellido">
+                </div>
+                <div>
+                <label for="email">Email</label>
+                <input type="text" id="email">
+                </div>
+                <div>
+                <label for="telefono">Telefono</label>
+                <input type="text" id="telefono">
+                </div>
+                <div>
+                <h3> 
+                Género:
+                </h3>
+                </div>
+                <div>
+                <label for="masculino">Masculino</label>
+                <input type="radio" name="genero">
+                <label for="femenino">Femenino</label>
+                <input type="radio" name="genero">
+                <label for="otro">Otro</label>
+                <input type="radio" name="genero">
+                </div>
+                <div>
+                <select name="" id="">
+                <option value="">Pais</option>
+                <option value="">Argentina</option>
+                <option value="">Paraguay</option>
+                <option value="">Uruguay</option>
+                <option value="">Chile</option>
+                <option value="">Otro</option>  
+                </div>
+                </select>
+                <div>
+                <h3>Mensaje:</h3>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div>
+                <input type="submit">
+                <input type="reset">
+                </div>
+            </form>
+        </section>
     </main>
 
     <footer>
@@ -85,6 +86,7 @@
         <img src="../img/whastapp.png" alt="whastapp">
         </section>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
