--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         </section>
         <section class="texto">
             <div>
-                <h2>
-                Convierte tu casa en un Hogar adoptando un Gato
+                <h2 id="Aqui">
+                Convierte tu casa en un Hogar adoptando un Gato 
                 </h2>
                 <h3>Pon un gato en tu vida y te relajarás con sus ronroneos, te hará sentir especial y único 
                 cuando te buscará (recuerda: ellos siempre deciden cuándo). Pero como toda decisión 
