--- a/pages/adopta.html
+++ b/pages/adopta.html
@@ -31,50 +31,83 @@
     <main class="imagenes">
         <h3>Gatitos en adopción</h3>
         <section class="adopta">
-            <div>
-            <img src="../img/gatoblancoynaranja.jpg" alt="gatoblancoynaranja">
-            <h2> Oliver</h2>
-            <p>OLIVER fue rescatado de la perrera, de donde posiblemente no hubiera salido nunca. 
-                Terminó ahí debido a una denuncia, por una caso de síndrome de Noé, convivía junto 
-                a unos 20 animales entre perros y gatos, al recibir una denuncia fueron a sacar a 
-                todos los animales y terminaron en la perrera</p>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/gatoblancoynaranja.jpg" class="card-img-top" alt="Oliver">
+                <div class="card-body">
+                <p class="card-text">OLIVER fue rescatado de la perrera, de donde posiblemente no hubiera salido
+                    nunca. 
+                    convivía junto a unos 20 animales entre perros y gatos. Es un gatito muy cariñoso que se 
+                    encuentra a la espera de una familia cariñosa y responsable.
+                    </p>
             </div>
-            <div>
-            <img src="../img/gatonaranja.jpg" alt="gatonaranja">
-            <h2>Felix</h2>
-            <p>
-                Felix es un precioso gato adulto, muy cariñoso y bueno que está buscando adopción.
-                Fue encontrado dentro del cementerio parque, seguramente abandonado, porque se veía un gato casero, 
-                se arrimaba a todos los humanos que pasaban, el pobre estaba en
-                un estado increíblemente mal, que es normal en gato que no sabe vivir en la calle.
-            </p>
             </div>
-            <div>
-            <img src="../img/gatonegro.jpg" alt="gatonegro">
-            <a href="./pages/adopta.html">Otis</a>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/gatonaranja.jpg" class="card-img-top" alt="Felix">
+                <div class="card-body">
+                <p class="card-text">FELIX es un precioso gatito, muy cariñoso y bueno que está buscando adopción.
+                    Fue encontrado dentro del cementerio parque, seguramente abandonado, porque se veía un gato casero, 
+                    se arrimaba a todos los humanos que pasaban.</p>
+                </div>
+                </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/gatonegro.jpg" class="card-img-top" alt="Otis">
+                <div class="card-body">
+                <p class="card-text">OTIS es un precioso gato de unos 2 años, esta apto para convivir con otras mascotas
+                    y disfruta de la compañia de los niños, está a la espera de una cariñosa familia desde que fue
+                    encontrado abandonado en una plaza.
+                    </p>
             </div>
-            <div>
-            <img src="../img/gatotricolor.jpg" alt="gatotricolor">
-            <a href="./pages/adopta.html">Nala</a>
             </div>
-            <div>
-            <img src="../img/gatoa.jpg" alt="gatoa">
-            <a href="./pages/adopta.html">Grey</a>
+            <div class="card" style="width: 18rem;">
+                    <img src="../img/gatotricolor.jpg" class="card-img-top" alt="Nala">
+                    <div class="card-body">
+                    <p class="card-text">NALA es una preciosa gata colorida muy alegre y divertida super compañera
+                        tiene aproximadamente  un año y es adaptable a cualquier individuo que le brinde amor.
+                        Fue abandonada por sus primeros dueños debido a una mudanza.
+                    </p>
             </div>
-            <div>
-            <img src="../img/gatob.jpg" alt="gatob">
-            <a href="./pages/adopta.html">Orange</a>
             </div>
-            <div>
-            <img src="../img/gatoc.jpg" alt="gatoc">
-            <a href="./pages/adopta.html">Patitas</a>
+            <div class="card" style="width: 18rem;">
+                    <img src="../img/gatoa.jpg" class="card-img-top" alt="Grey">
+                    <div class="card-body">
+                    <p class="card-text"> GREY es un felino tranquilo y compañero es muy territorial esta 
+                        buscando una familia paciente que lo comprenda y le de mucho cariño. Puede parecer
+                        arisco en un principio pero solo necesita amor.</p>
             </div>
-            <div>
-            <img src="../img/gatod.jpg" alt="gatod">
-            <a href="./pages/adopta.html">Blanca</a>
             </div>
-        </section>
-        </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/gatob.jpg" class="card-img-top" alt="Orange">
+                <div class="card-body">
+                <p class="card-text"> ORANGE es un gato adulto super apacible le gusta estar al lado de los niños y 
+                    se lleva bien con otros gatos aunque no tanto con los perros, espera adopción hace varios años
+                    ya que al ser adulto no es de los más elegidos. </p>
+            </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/gatoc.jpg" class="card-img-top" alt="Patitas">
+                <div class="card-body">
+                <p class="card-text">PATITAS es una gatita muy juguetona, le gusta explorar árboles y dormir largas
+                    siestas junto a sus humanos, tiene un año de edad, fue abandonada con sus hermanitos, 
+                    ella solita sigue esperando una familia.
+                </p>
+            </div> 
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/gatod.jpg" class="card-img-top" alt="Blanca">
+                <div class="card-body">
+                <p class="card-text">BLANCA es una hermosa gata ojos celestes muy cariñosa, juguetona y 
+                    compañera se lleva bien con todas las mascotas se encuentra a la espera de una calida 
+                    familia responsable. Tiene aproximadamente 3 años.
+                </p>
+            </div>
+            </div>
+            </section>
+            <section class="adopcion">
+                <p> Si estas interesado en alguno de estos gatitos te invitamos a completar nuestro <a href="./contacto.html">formulario de contacto</a> 
+                    y a la brevedad nos comunicaremos para agendar una reunion.
+                    Recorda leer nuestra informacion para una adopcion responsable haciendo click <a href="../index.html#Aqui">AQUI</a> 
+                </p>
+            </section>
     </main>
 
     <footer>
