--- a/pages/colabora.html
+++ b/pages/colabora.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Colaborá</title>
 </head>
-    <body>
-        <header>
-        <h1>
-            <img src="../img/logo.png" alt="logo">
-            Colaborá para que podamos continuar ayudando.
-        </h1>
-        <nav>
+<body>
+    <header>
+    <h1>
+        <img src="../img/logo.png" alt="logo">
+        Colaborá para que podamos continuar ayudando.
+    </h1>
+    <nav>
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./quienessomos.html">Quiénes Somos</a></li>
@@ -24,51 +24,49 @@
             <li><a href="./colabora.html">Colaborá</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
-        </nav>
-        </header>
-        <main>
-            <h2 class="parrafo-tienda">
-                Bienvenidos a la tienda solidaria de «GARRITAS AVENTURERAS». Todos los productos que encontrarás aquí 
-                tienen como fin poder recaudar fondos para ayudarnos a cubrir las necesidades básicas de 
-                nuestros rescatados, por ello te agradecemos tu colaboración para poder seguir con nuestra labor.
-            </h2>
-            <section class="tienda">
-                <div class="card" style="width: 18rem;">
-                    <img src="../img/tienda1.jpg" class="card-img-top" alt="taza">
-                    <div class="card-body">
-                    <h5 class="card-title">Taza Cat</h5>
-                    <p class="card-text">Hermosa manera de ayudar y beber un rico cafe con nuestra taza</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../img/tienda2.jpg" class="card-img-top" alt="TazayPlato">
-                    <div class="card-body">
-                    <h5 class="card-title">Set Desayunos y Meriendas</h5>
-                    <p class="card-text">Divina taza con plato para los amantes gatunos</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../img/tienda3.jpg" class="card-img-top" alt="Mate">
-                    <div class="card-body">
-                    <h5 class="card-title">Mate</h5>
-                    <p class="card-text">Mate con un precioso diseño gatero.</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="../img/tienda4.jpg" class="card-img-top" alt="SetMatero">
-                    <div class="card-body">
-                    <h5 class="card-title">Set Matero</h5>
-                    <p class="card-text">Los diseños mas peludos en sets de mates para una tarde de plaza</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
-                    </div>
-                </div>
-            </section>
-
-
-        </main>
+    </nav>
+    </header>
+    <main>
+        <h2 class="parrafo-tienda">
+            Bienvenidos a la tienda solidaria de «GARRITAS AVENTURERAS». Todos los productos que encontrarás aquí 
+            tienen como fin poder recaudar fondos para ayudarnos a cubrir las necesidades básicas de 
+            nuestros rescatados, por ello te agradecemos tu colaboración para poder seguir con nuestra labor.
+        </h2>
+        <section class="tienda">
+            <div class="card" style="width: 18rem;">
+                <img src="../img/tienda1.jpg" class="card-img-top" alt="taza">
+                <div class="card-body">
+                <h5 class="card-title">Taza Cat</h5>
+                <p class="card-text">Hermosa manera de ayudar y beber un rico cafe con nuestra taza</p>
+                <a href="#" class="btn btn-primary">COMPRAR</a>
+            </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/tienda2.jpg" class="card-img-top" alt="TazayPlato">
+                <div class="card-body">
+                <h5 class="card-title">Set Desayunos y Meriendas</h5>
+                <p class="card-text">Divina taza con plato para los amantes gatunos</p>
+                <a href="#" class="btn btn-primary">COMPRAR</a>
+            </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/tienda3.jpg" class="card-img-top" alt="Mate">
+                <div class="card-body">
+                <h5 class="card-title">Mate</h5>
+                <p class="card-text">Mate con un precioso diseño gatero. Para esas tardes de plaza.</p>
+                <a href="#" class="btn btn-primary">COMPRAR</a>
+            </div>
+            </div>
+            <div class="card"  style="width: 18rem;" >
+                <img src="../img/tienda4.jpg" class="card-img-top" alt="SetMatero">
+                <div class="card-body">
+                <h5 class="card-title">Set Matero</h5>
+                <p class="card-text">Los diseños mas peludos en sets de mates para una tarde de plaza</p>
+                <a href="#" class="btn btn-primary">COMPRAR</a>
+            </div>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <section>
